# sot-romeo

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  dynamic-romeo.cpp  dynamic-romeo.hh  sot-romeo-controller.cpp  sot-romeo-controller.hh  sot-romeo-device.cpp  sot-romeo-device.hh
src/dynamic_graph/sot/romeo/: __init__.py  prologue.py  robot.py  robot.py.in  romeo.py.in
